<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_premium"
        android:icon="@drawable/ic_premium_selector"
        android:title="@string/premium"/>

    <item
        android:id="@+id/nav_spacer"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite_selector_bottom"
        android:title="@string/favorites"/>
        
    <item
        android:id="@+id/nav_downloads"
        android:icon="@drawable/ic_download_selector"
        android:title="@string/downloads"/>

</menu>
